--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,10 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+ol,
+ul {
+  list-style: none;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
