--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,11 +1,13 @@
 .profileCard {
   width: 320px;
-  border: 2px solid #ccc;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  border: 2px solid #00c3ff;
   border-radius: 10px;
   text-align: center;
-  padding: 20px;
+
   font-family: Arial, sans-serif;
-  background-color: #f8f9fa;
+  background-color: #fafafa;
 }
 
 .profileAvatar {
@@ -18,43 +20,46 @@
 .profileAvatar img {
   width: 100px;
   height: 100px;
+  padding: 10px;
   border-radius: 50%;
   background-color: #2e2e2e;
   object-fit: cover;
-  padding: 10px;
 }
 
 .profileUsername {
+  margin: 10px 0 5px;
   font-size: 20px;
   font-weight: bold;
-  margin: 10px 0 5px;
   color: #000;
 }
 
 .profileTag {
+  margin-bottom: 5px;
   font-size: 16px;
   color: #777;
-  margin-bottom: 5px;
 }
 
 .profileLocation {
+  margin-bottom: 15px;
   font-size: 16px;
   color: #999;
-  margin-bottom: 15px;
 }
 
 .profileStats {
+  margin: 0px;
   display: flex;
-  border-top: 2px solid #ccc;
-  background: #e0e0e0;
+  border-top: 2px solid #808080;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background: #d3d3d3;
 }
 
 .stat {
+  padding: 15px;
   flex: 1;
   text-align: center;
-  padding: 15px;
   font-size: 14px;
-  border-right: 2px solid #ccc;
+  border-right: 2px solid #808080;
 }
 
 .stat:last-child {
