--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -10,33 +10,33 @@
 .table {
   width: 100%;
   border-collapse: collapse;
-  background-color: white;
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 .table th {
-  background-color: #1f1f1f;
-  color: white;
+  padding: 15px;
+  background-color: #2a2a2a;
+  border: none;
+  color: #ffffff;
   font-weight: 500;
   text-align: center;
-  padding: 1rem;
 }
 
 .table td {
   padding: 1rem;
   text-align: center;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #1f1f1f;
 }
 
 .table tbody tr:nth-child(even) {
-  background-color: #f3f3f3;
+  background-color: #d3d3d3;
 }
 
 .table tbody tr:nth-child(odd) {
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .table th:not(:last-child),
 .table td:not(:last-child) {
-  border-right: 1px solid #e5e5e5;
+  border-right: 1px solid #1f1f1f;
 }
