--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
 
 a {
   font-weight: 500;
@@ -53,9 +59,12 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
 ol,
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 @media (prefers-color-scheme: light) {
   :root {
